# gifti-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
gifti-rs/: Cargo.toml
gifti-rs/src/: cras.rs  error.rs  intent.rs  lib.rs  model.rs  reader.rs  writer.rs
gifti-rs/tests/: round_trip.rs
giftirs-cli/: Cargo.toml
giftirs-cli/src/: info.rs  main.rs  transform.rs
